refactor: move ieee search into its own module

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "ansi-color": "^0.2.1",
     "ansi-color-table": "^1.0.0",
     "babel": "^5.6.14",
-    "bluebird": "*",
+    "bluebird": "^2.9.32",
+    "debug": "^2.2.0",
     "docopt": "~0.4.1",
     "git-hist": "0.0.3",
     "livescript": "^1.4.0",
