--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
   "author": "Vittorio Zaccaria",
   "license": "BSD",
   "dependencies": {
-    "ansi-color": "^0.2.1",
-    "ansi-color-table": "^1.0.0",
-    "babel": "^5.6.14",
-    "bluebird": "^2.9.32",
-    "debug": "^2.2.0",
-    "docopt": "~0.4.1",
+    "ansi-color": "0.2.1",
+    "ansi-color-table": "1.0.0",
+    "babel": "5.6.14",
+    "bluebird": "2.9.32",
+    "debug": "2.2.0",
+    "docopt": "0.4.1",
     "git-hist": "0.0.3",
-    "livescript": "^1.4.0",
-    "moment": "^2.10.3",
-    "optimist": "^0.6.1",
-    "shelljs": "*",
-    "superagent": "^1.2.0",
-    "underscore.string": "^3.1.1",
-    "urlencode": "^1.0.1",
-    "word-wrap": "^1.0.3",
-    "xml2json": "^0.7.1"
+    "livescript": "1.4.0",
+    "moment": "2.10.3",
+    "optimist": "0.6.1",
+    "shelljs": "0.5",
+    "superagent": "1.2.0",
+    "underscore.string": "3.1.1",
+    "urlencode": "1.0.1",
+    "word-wrap": "1.0.3",
+    "xml2json": "0.7.1"
   }
 }
